--- a/pages/against/against.wxml
+++ b/pages/against/against.wxml
@@ -1,4 +1,35 @@
 <!--against.wxml-->
 <view>
-<button>123</button>
+  <view>
+    <view>参赛人数：{{personCount}}</view>
+    <label for="count">每人场次：</label>
+    <input id="roundcount" value="{{roundcount}}"></input>
+    <button bindtap='createAgainstTable'>生成对阵表</button>
+  </view>
+  <block wx:for="{{againstTable}}" wx:key="item">
+    <view class="againstItem">
+      <view class="side">
+        <view class="name">{{item[0]}}</view>
+        <view class="name">{{item[1]}}</view>
+      </view>
+      <view class="score">
+        <input class="scoreA" value="10" />
+        <view class="scoreBtn">
+          <button>+</button>
+          <button>-</button>
+        </view>
+        :
+        <input class="scoreB" value="12" />
+        <view class="scoreBtn">
+          <button>+</button>
+          <button>-</button>
+        </view>
+      </view>
+      <view class="side">
+        <view class="name">{{item[2]}}</view>
+        <view class="name">{{item[3]}}</view>
+      </view>
+    </view>
+  </block>
+
 </view>
