--- a/pages/against/against.wxss
+++ b/pages/against/against.wxss
@@ -1,1 +1,39 @@
 /* against.wxss */
+.againstItem{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  background-color: #eee;
+  margin: 20px 10px;
+}
+.side{
+  display: flex;
+  flex-direction: column
+}
+.side .name{
+  margin:5px;
+}
+.score{
+  display: flex;
+  align-items: center;
+}
+.scoreA,.scoreB{
+  background: red;
+  height:40px;
+  width:40px;
+  text-align: center;
+  border-radius: 50%;
+  margin:5px;
+  padding:5px;
+}
+.scoreBtn{
+  color:orange;
+}
+.scoreBtn button{
+  background: green;
+  height:30px;
+  width:40px;
+  margin:5px;
+  padding:2px;
+}
