--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,13 @@
 <!--index.wxml-->
-<view class="container">
-  <block wx:for="{{personList}}" wx:key="item" wx:for-item="name" class="personList">
-    <input bindtap="personNameTap" class="personName" value="{{name}}"/>
-    <!-- <button bindtap="delTap" class="del">删除</button> -->
-  </block>
-  <button>添加人员</button>
+<view class="wrapper">
+  <view class="personList">
+    <view wx:for="{{personList}}" wx:key="item" wx:for-item="name" class="item">
+      <input bindtap="personNameTap" class="personName" placeholder='姓名' value="{{name}}" />
+      <button bindtap="delTap" class="del">删除</button>
+    </view>
+  </view>
+  <view class="btn">
+    <button>添加</button>
+    <button>完成</button>
+  </view>
 </view>
