--- a/pages/result/result.wxml
+++ b/pages/result/result.wxml
@@ -2,8 +2,8 @@
 <view class="wrapper">
   <view class="item itemHead">
     <view class='item1'>姓名</view>
-    <view class='item2'>净省分</view>
     <view class='item3'>胜-负</view>
+    <view class='item2'>净胜分</view>
     <view class='item4'>名次</view>
   </view>
   <view wx:for="{{result}}" wx:key="{{item}}"  class="item itemBody">
