--- a/pages/against/against.wxml
+++ b/pages/against/against.wxml
@@ -3,14 +3,14 @@
   <view class="baseInfo">
     <view class="personCount">
       <view>参赛人数：{{personCount}}</view>
-      <!-- <label class="warning" wx:if="{{personCount<4}}">不能少于4人</label> -->
+      <!-- <label class="warning" wx:if="{{personCount<4}}">不能少于4人</label>  -->
     </view>
     <view class="roundCount">
       <label for="count">每人场次：</label>
       <input bindinput="roundCountChange" value="{{roundCount}}"></input>
-      <!-- <label class="warning">不能少于4人</label> -->
+      <label class="warning" wx:if="{{roundCount>8}}">不建议＞8场，可能会很累的哦</label>
     </view>
-    <button bindtap='createAgainstTable' disabled="{{personCount<4?'disabled':false}}"class="createTableBtn" wx:if="{{!showAgainstTable}}">生成对阵表</button>
+    <button bindtap='createAgainstTable' disabled="{{personCount<4?'disabled':false}}" class="createTableBtn" wx:if="{{!showAgainstTable}}">生成对阵表</button>
   </view>
 
   <view wx:for="{{scoreList}}" wx:key="item" class="againstTable">
@@ -19,22 +19,22 @@
         <view class="name">{{item[0]}}</view>
         <view class="name">{{item[1]}}</view>
       </view>
-      <view class="score">
-        <view class="scoreBtnGroup">
-          <button  bindtap='scoreChange' data-id="{{index}}" data-side="A" data-way="more">+</button>
-          <button  bindtap='scoreChange' data-id="{{index}}" data-side="A" data-way="less">-</button>
-        </view>
-        <view class="scoreA">{{item[4]}}</view>
-        <view class="sub">
-          <view>vs</view>
-          <view>第{{index+1}}场</view>
-        </view>
-        <view class="scoreB">{{item[5]}}</view>
-        <view class="scoreBtnGroup">
-          <button  bindtap='scoreChange' data-id="{{index}}" data-side="B" data-way="more">+</button>
-          <button  bindtap='scoreChange' data-id="{{index}}" data-side="B"  data-way="less">-</button>
-        </view>
+      <!-- <view class="score"> -->
+      <view class="handleBtnGroup">
+        <button bindtap='scoreChange' data-id="{{index}}" data-side="A" data-way="more">+</button>
+        <button bindtap='scoreChange' data-id="{{index}}" data-side="A" data-way="less">-</button>
       </view>
+      <view class="score">{{item[4]}}</view>
+      <view class="sub">
+        <view>vs</view>
+        <view>第{{index+1}}场</view>
+      </view>
+      <view class="score">{{item[5]}}</view>
+      <view class="handleBtnGroup">
+        <button bindtap='scoreChange' data-id="{{index}}" data-side="B" data-way="more">+</button>
+        <button bindtap='scoreChange' data-id="{{index}}" data-side="B" data-way="less">-</button>
+      </view>
+      <!-- </view> -->
       <view class="side">
         <view class="name">{{item[2]}}</view>
         <view class="name">{{item[3]}}</view>
