--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,6 +4,26 @@
        width:100%;
        margin-bottom:60px;
     }
+    .content{
+      margin:10px 20px;
+      display: grid;
+      justify-content: center;
+    }
+    textarea{
+      border:1px solid #eee;
+      padding:20px;
+      letter-spacing: 2px;
+      height:100px;
+      line-height: 25px;
+    }
+    .tip{
+      font-size: 12px;
+      color: #666;
+    }
+    .tip .name{
+      display: inline-block;
+      margin:5px;
+    }
     .personList{
      padding:0;
      margin:0;
