--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,51 +1,95 @@
 /**index.wxss**/
-
+@import '../../util.wxss';
     .wrapper {
        width:100%;
        margin-bottom:60px;
     }
     .content{
-      margin:10px 20px;
-      display: grid;
-      justify-content: center;
+      margin:20rpx;
+      padding:0 20rpx;
+      width:710rpx;
+      /* display: grid;
+      justify-content: center; */
     }
     textarea{
       border:1px solid #eee;
-      padding:20px;
+      padding:20rpx;
       letter-spacing: 2px;
-      height:100px;
-      line-height: 25px;
+      height:150rpx;
+      line-height: 50rpx;
+      font-weight: lighter;
     }
-    .tip{
-      font-size: 12px;
-      color: #666;
+    .sortTable{
+      width:710rpx;
+      margin-top:50rpx;
     }
-    .tip .name{
-      margin:5px;
-    }
-    .personList{
-     padding:0;
-     margin:0;
-    }
-    .item{
-      display: flex; 
-      margin:20px 0;
-      justify-content: space-around;
-    }
-     .personName {
+    .title,.add{
+      width:100%;
       text-align: center;
-      line-height: 40px;
-      height:40px;
-      width:70%; 
-      
-      margin-left:20px;
-      border: 1px solid #ddd;
-      border-radius: 5px;  
+      height:40rpx;
+      line-height: 40rpx;
+      vertical-align: middle;
+      font-size: 50rpx;
+      margin:40rpx auto;
+    }
+    .ul{
+      width:100%;
+      font-size: 40rpx;
     } 
-    .del{
+    .li{
+      display: flex;
+      background:#eee;
+      margin:30rpx 0;
+      width:100%;
+      height:100rpx;
+      line-height: 100rpx;
+      vertical-align: middle;
+      border-radius: 20rpx;
+    }
+    .order::before{
+      content: 'NO.';
+      font-size: 60%;
+      font-style: italic;
+    }
+    .name{
+      flex:1
+    }
+    .name,.order{
+      text-align: center
+    }
+    .icon {
+      width: 80rpx;
+      margin:10rpx;
       text-align: center;
-      line-height: 40px;
-      width:60px;
+      background: lightblue;
+      border-radius: 50%;
+    }
+    .null{
+      background: inherit;
+    }
+    .up,.down{
+      color:azure;
+    }
+    .up::after{
+      content: '↑';
+      font-size: 150%;
+      display: inline-block;
+      transform: translateY(-5rpx);
+    }
+    .down::after{
+      content: '↓';
+      font-size: 150%;
+      display: inline-block;
+      transform: translateY(-5rpx);
+    }
+    .remove{
+      color:lightcoral;
+    }
+    .remove::after{
+      content: '×';
+      font-size: 150%;
+      display: inline-block;
+      transform: translateY(-10rpx);
     }
     .btn{
       display: flex;
