--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,15 @@
 <!--index.wxml-->
-<view class="wrapper">
+<view class="warp">
+    <view class="dot" animation="{{animationData}}"></view>
   <view class="content">
     <textarea placeholder='' bindinput="getPersonList" class="textarea" value="{{personListToString}}">
     </textarea>
-    <!-- <view class="tip">参赛人：
-      <text class="name"  wx:for="{{personList}}" wx:key="item">{{index+1}}.{{item}}</text>
-    </view> -->
-    <view class="sortTable" wx:if="{{personList}}">
+    <!-- <block  wx:for="{{personList}}" wx:key="item"> -->
+     <!-- <view class="tip">{{index+1}}.{{item}} -->
+     <!-- </view> 
+    </block>  -->
+    <view class="tip">共 {{personList.length}} 人参赛</view>
+    <view class="sortTable" wx:if="{{personList.length>0}}">
       <view class="title">实力排行榜</view>
       <view class="ul" bindtap="sortPersonList">
         <view class="li" wx:for="{{personList}}" wx:key="item">
@@ -20,6 +23,6 @@
         </view>
       </view>
     </view>
-    <button bindtap="submit" class="submit">生成对阵表</button>
+    <button bindtap="submit" class="submit"  wx:if="{{personList.length>0}}">生成对阵表</button>
   </view>
 </view>
